Pre-save entities and mock persistence in tests
Update unit tests to pre-persist related entities and adapt to the new persistenceService API. ItemRepositoryTest now saves Genre/Director/Actor entities before attaching them to ItemEntity and updates comments to reflect merge behavior. TmdbDataCollectorServiceTest replaces direct itemRepository existence and detail-fetch stubs with discoverAndPersistNewMovies/discoverAndPersistNewTvShows interactions and adjusts verifications accordingly. TmdbDataSynchronizerServiceTest uses dynamic date range (yesterday/today) and sets lastSyncDate to match the new range. These changes align tests with recent API/behavior changes and prevent cascade-persist assumptions.